2010-01-27  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #13235: Pre- & Postprocessing Hook for handleIncomingCommands
	* Fixed bug: #13261: extension load order might prevent wizardItems from extensions

2010-01-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13328: Don't link to file_edit.php if staticDS comes from extension
	* Fixed bug: #13256: Installing Mininews breaks database driven DS/TO handling
	
2010-01-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13286: mod2 is not localized
	
2010-01-19  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13278: "New" and "Browse" buttons don't seem to work properly after Drag&Drop
	* Fixed bug: #13276: makeLocalRecord pointer isn't updated during drag&drop
	* Fixed bug: #13275: sortable_updatePasteButtons not needed anymore
	* Fixed bug: #11520: DS Tag for Hiding Field Preview Data (part 2)
	* Fixed bug: #13154: Deleting the last element from a section in an FCE crashes rendering
	* Fixed bug: #3843: Unmapping does not hide ce field in page module
	
2010-01-18  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bugfix #13180: Sanitize returnUrl
	* Corrected typo in extConf language file
	
2010-01-17  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13274: delete icon carries wrong css-class
	* Fixed bug: #4585: Wrond links for editing content stored in page flexform 
	* Fixed bug: #13268: ReturnURls after the sidebar was reloaded aren't correct

2010-01-13  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bugfix #13225: Cleanup invalid html in page module
	* Fixed bug: #13225: Cleanup invalid html in page module
	* Fixed bug: #13213: page module calls pagerenderer too early

2010-01-10  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13159: Render Button in version tab "Create version of this page" if no page version exists

2010-01-09  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #13174: Sub Page Datastructure Field missing (Part2) 
